downgrade to java 17